--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,4 @@
-sphinxcontrib-napoleon
-myst-parser
-sphinx>=4.0.2
-sphinx_rtd_theme>=1.0.0
-linkify-it-py
-nbsphinx
-
-setuptools
-
-gym
-numpy
-matplotlib
-opencv-python
+gym>=0.26.2
+numpy>=1.24.1
+matplotlib>=3.6.2
+opencv-python>=4.7.0.72
